--- a/src/app/features/despesas/despesas.component.html
+++ b/src/app/features/despesas/despesas.component.html
@@ -30,6 +30,7 @@
 
   <p class="error" *ngIf="error">{{ error }}</p>
   <p-toast position="top-right"></p-toast>
+  <p-confirmDialog></p-confirmDialog>
 
   <div class="grid two">
     
